cambio de rutas para apis

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -166,7 +166,9 @@ LIMIT 10;'
 
     </main>
 </div>
-
+<script>
+    window.API_BASE_URL = "{{ api_base_url }}";
+</script>
 <script src="/static/js/app.js?v=1"></script>
 <script src="/static/js/text.js?v=5"></script>
 </body>
